--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -54,4 +54,9 @@ responses:
       code: 20002
       message: "Movie(s) not found"
 
+spring:
+  jpa:
+    hibernate:
+      naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 
