Added test cases

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- H2 Veritabanı -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
