Added jacoco in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,27 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <!-- Set up Jacoco for test coverage. This can be used by SonarQube.  -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- This execution is required for generating the report -->
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
