Modify application.properties to change the app's name and added Dockerfile, and it can run in local Docker.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-spring.application.name=movie_service
+spring.application.name=search_service
 
 # Disable Spring Boot Banner
 spring.main.banner-mode=off
 
 # Load the database config and sensitive data in the application-secrets.properties file
 spring.config.import=classpath:application-secrets.properties
-
-
-
-
-
