Added Dockerfile, modify application.properties, modify application.yaml, added log to MovieController.java, modify pom.xml.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.main.banner-mode=off
 
 # Load the database config and sensitive data in the application-secrets.properties file
 spring.config.import=classpath:application-secrets.properties
+
+# Port and host setting
+server.port=8080
+server.address=0.0.0.0
+
+# Logging setting
+logging.level.com.example.movie_service=INFO
+logging.file.name=
+logging.file.path=
