--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+            </plugin>
             <!-- Set up Jacoco for test coverage. This can be used by SonarQube.  -->
             <plugin>
                 <groupId>org.jacoco</groupId>
